# yadro-test

./: .gitignore  CMakeLists.txt  README.md  little_programm.cpp
config/: config.txt
lib/: CMakeLists.txt  FileTape.cpp  FileTape.hpp  ITape.hpp  TapeConfig.hpp  TapeSorter.cpp  TapeSorter.hpp
tests/: CMakeLists.txt  TapeTests.cpp
